--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -11,10 +11,10 @@
     </div>
   <% end %>
 
-  <div class="form-group">
-    <%= f.label :rating %>
-    <%= f.number_field :rating, class: "form-control"%>
+  <div id="star-rating">
+
   </div>
+
   <div class="form-group">
     <%= f.label :comment %>
     <%= f.text_area :comment, class: "form-control" %>
@@ -23,3 +23,11 @@
     <%= f.submit class: "btn btn-primary" %>
   </div>
 <% end %>
+
+
+<script>
+  $('#star-rating').raty({
+    path: 'https://s3-us-west-1.amazonaws.com/nateyelpdemo/stars',
+    scoreName: 'review[rating]'
+  });
+</script>
