fixed error in review listings

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -62,7 +62,7 @@
 
 								<% if user_signed_in? %>
 									<% if (review.user == current_user) || (current_user.admin?) %>
-										<%= link_to "Edit", edit_restaurant_review_path(@restaurant, reivew)) %>
+										<%= link_to "Edit", edit_restaurant_review_path(@restaurant, review) %>
 										<%= link_to "Delete", restaurant_review_path(@restaurant, review), method: :delete %>
 									<% end %>
 								<% end %>
